Overflow Fix

--- a/css.css
+++ b/css.css
@@ -290,6 +290,7 @@ button.btninit {
 
 #USERFRONTPAGE{
   height:0;
+  overflow:hidden;
 }
 
 body {
